MintTranslator/Parser/MintDParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MintDParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class MintDParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		WS=1, BLOCK_COMMENT=2, LINE_COMMENT=3, VOID=4, STRING=5, INT=6, BOOL=7, 
		FLOAT=8, INTEGER_LITERAL=9, FLOAT_LITERAL=10, HEX_INTEGER_LITERAL=11, 
		SERVER=12, CLIENT=13, BACK_STRING=14, DOUBLE_STRING=15, BACK_TICK=16, 
		REF=17, LPAR=18, RPAR=19, LBRACE=20, RBRACE=21, LSQBRACKET=22, RSQBRACKET=23, 
		SEMI=24, COMMA=25, DOT=26, COLOR=27, BREAK=28, CONTINUE=29, RETURN=30, 
		ASSIGNMENT=31, TRUE=32, FALSE=33, IF=34, ELSE=35, SWITCH=36, CASE=37, 
		DEFAULT=38, WHILE=39, FOR=40, TIMES=41, DIVIDE=42, MODULO=43, PLUS=44, 
		MINUS=45, LT=46, GT=47, LTE=48, GTE=49, DOLLAR=50, OP_STREAM=51, LOGICAL_AND=52, 
		LOGICAL_OR=53, ADD_ASSIGN=54, SUB_ASSIGN=55, MULT_ASSIGN=56, DIV_ASSIGN=57, 
		MOD_ASSIGN=58, AND_ASSIGN=59, OR_ASSIGN=60, BANG=61, EXTERN=62, INC=63, 
		DEC=64, OP_EQ=65, OP_NE=66, DO=67, Identifier=68;
	public const int
		RULE_primitiveType = 0, RULE_type = 1, RULE_literal = 2, RULE_breakStatement = 3, 
		RULE_continueStatement = 4, RULE_returnStatement = 5, RULE_block = 6, 
		RULE_functionSpecifier = 7, RULE_functionDeclaration = 8, RULE_parameters = 9, 
		RULE_parameter = 10, RULE_statement = 11, RULE_embeddedStatement = 12, 
		RULE_declarationStatement = 13, RULE_nullStatement = 14, RULE_expressionStatement = 15, 
		RULE_selectionStatement = 16, RULE_ifStatement = 17, RULE_elseStatement = 18, 
		RULE_switchStatement = 19, RULE_switchCases = 20, RULE_caseStatement = 21, 
		RULE_caseLabel = 22, RULE_iterationStatement = 23, RULE_whileStatement = 24, 
		RULE_forStatement = 25, RULE_forInitExp = 26, RULE_forCondExp = 27, RULE_forLoopExp = 28, 
		RULE_jumpStatement = 29, RULE_statementList = 30, RULE_local_variable_declaration = 31, 
		RULE_variable_declarator = 32, RULE_expression = 33, RULE_assignment_operator = 34, 
		RULE_assignmentExp = 35, RULE_nonAssignmentExp = 36, RULE_conditionalOrExp = 37, 
		RULE_conditionalAndExp = 38, RULE_equalityExp = 39, RULE_relationalExp = 40, 
		RULE_additiveExp = 41, RULE_multiplicativeExp = 42, RULE_unaryExp = 43, 
		RULE_typeCast = 44, RULE_unaryOperator = 45, RULE_preIncDecExp = 46, RULE_postfixExp = 47, 
		RULE_postfix = 48, RULE_methodInvocation = 49, RULE_methodExtern = 50, 
		RULE_argList = 51, RULE_memberAccess = 52, RULE_primaryExp = 53, RULE_parenthExp = 54, 
		RULE_localizeExp = 55, RULE_localizeParams = 56, RULE_localizeParam = 57;
	public static readonly string[] ruleNames = {
		"primitiveType", "type", "literal", "breakStatement", "continueStatement", 
		"returnStatement", "block", "functionSpecifier", "functionDeclaration", 
		"parameters", "parameter", "statement", "embeddedStatement", "declarationStatement", 
		"nullStatement", "expressionStatement", "selectionStatement", "ifStatement", 
		"elseStatement", "switchStatement", "switchCases", "caseStatement", "caseLabel", 
		"iterationStatement", "whileStatement", "forStatement", "forInitExp", 
		"forCondExp", "forLoopExp", "jumpStatement", "statementList", "local_variable_declaration", 
		"variable_declarator", "expression", "assignment_operator", "assignmentExp", 
		"nonAssignmentExp", "conditionalOrExp", "conditionalAndExp", "equalityExp", 
		"relationalExp", "additiveExp", "multiplicativeExp", "unaryExp", "typeCast", 
		"unaryOperator", "preIncDecExp", "postfixExp", "postfix", "methodInvocation", 
		"methodExtern", "argList", "memberAccess", "primaryExp", "parenthExp", 
		"localizeExp", "localizeParams", "localizeParam"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'void'", "'string'", "'int'", "'bool'", "'float'", 
		null, null, null, null, null, null, null, "'`'", "'&'", "'('", "')'", 
		"'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "':'", "'break'", "'continue'", 
		"'return'", "'='", "'true'", "'false'", null, "'else'", "'switch'", "'case'", 
		"'default'", "'while'", "'for'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", 
		"'>'", "'<='", "'>='", "'$'", "'<<'", "'&&'", "'||'", "'+='", "'-='", 
		"'*='", "'/='", "'%='", "'&='", "'|='", "'!'", "'extern'", "'++'", "'--'", 
		"'=='", "'!='", "'do'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "WS", "BLOCK_COMMENT", "LINE_COMMENT", "VOID", "STRING", "INT", 
		"BOOL", "FLOAT", "INTEGER_LITERAL", "FLOAT_LITERAL", "HEX_INTEGER_LITERAL", 
		"SERVER", "CLIENT", "BACK_STRING", "DOUBLE_STRING", "BACK_TICK", "REF", 
		"LPAR", "RPAR", "LBRACE", "RBRACE", "LSQBRACKET", "RSQBRACKET", "SEMI", 
		"COMMA", "DOT", "COLOR", "BREAK", "CONTINUE", "RETURN", "ASSIGNMENT", 
		"TRUE", "FALSE", "IF", "ELSE", "SWITCH", "CASE", "DEFAULT", "WHILE", "FOR", 
		"TIMES", "DIVIDE", "MODULO", "PLUS", "MINUS", "LT", "GT", "LTE", "GTE", 
		"DOLLAR", "OP_STREAM", "LOGICAL_AND", "LOGICAL_OR", "ADD_ASSIGN", "SUB_ASSIGN", 
		"MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
		"BANG", "EXTERN", "INC", "DEC", "OP_EQ", "OP_NE", "DO", "Identifier"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MintDParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MintDParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MintDParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MintDParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PrimitiveTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VOID() { return GetToken(MintDParser.VOID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(MintDParser.STRING, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(MintDParser.INT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(MintDParser.BOOL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(MintDParser.FLOAT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(MintDParser.Identifier, 0); }
		public PrimitiveTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primitiveType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterPrimitiveType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitPrimitiveType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMintDParserVisitor<TResult> typedVisitor = visitor as IMintDParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimitiveType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimitiveTypeContext primitiveType() {
		PrimitiveTypeContext _localctx = new PrimitiveTypeContext(Context, State);
		EnterRule(_localctx, 0, RULE_primitiveType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << STRING) | (1L << INT) | (1L << BOOL) | (1L << FLOAT))) != 0) || _la==Identifier) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PrimitiveTypeContext primitiveType() {
			return GetRuleContext<PrimitiveTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REF() { return GetToken(MintDParser.REF, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMintDParserVisitor<TResult> typedVisitor = visitor as IMintDParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeContext type() {
		TypeContext _localctx = new TypeContext(Context, State);
		EnterRule(_localctx, 2, RULE_type);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 118;
			primitiveType();
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==REF) {
				{
				State = 119;
				Match(REF);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LiteralContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER_LITERAL() { return GetToken(MintDParser.INTEGER_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BACK_STRING() { return GetTokens(MintDParser.BACK_STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BACK_STRING(int i) {
			return GetToken(MintDParser.BACK_STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] DOUBLE_STRING() { return GetTokens(MintDParser.DOUBLE_STRING); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOUBLE_STRING(int i) {
			return GetToken(MintDParser.DOUBLE_STRING, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT_LITERAL() { return GetToken(MintDParser.FLOAT_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEX_INTEGER_LITERAL() { return GetToken(MintDParser.HEX_INTEGER_LITERAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TRUE() { return GetToken(MintDParser.TRUE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FALSE() { return GetToken(MintDParser.FALSE, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literal; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterLiteral(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitLiteral(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMintDParserVisitor<TResult> typedVisitor = visitor as IMintDParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LiteralContext literal() {
		LiteralContext _localctx = new LiteralContext(Context, State);
		EnterRule(_localctx, 4, RULE_literal);
		try {
			int _alt;
			State = 137;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INTEGER_LITERAL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 122;
				Match(INTEGER_LITERAL);
				}
				break;
			case BACK_STRING:
				EnterOuterAlt(_localctx, 2);
				{
				State = 124;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 123;
						Match(BACK_STRING);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 126;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case DOUBLE_STRING:
				EnterOuterAlt(_localctx, 3);
				{
				State = 129;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 128;
						Match(DOUBLE_STRING);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 131;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case FLOAT_LITERAL:
				EnterOuterAlt(_localctx, 4);
				{
				State = 133;
				Match(FLOAT_LITERAL);
				}
				break;
			case HEX_INTEGER_LITERAL:
				EnterOuterAlt(_localctx, 5);
				{
				State = 134;
				Match(HEX_INTEGER_LITERAL);
				}
				break;
			case TRUE:
				EnterOuterAlt(_localctx, 6);
				{
				State = 135;
				Match(TRUE);
				}
				break;
			case FALSE:
				EnterOuterAlt(_localctx, 7);
				{
				State = 136;
				Match(FALSE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BreakStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BREAK() { return GetToken(MintDParser.BREAK, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(MintDParser.SEMI, 0); }
		public BreakStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_breakStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterBreakStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitBreakStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMintDParserVisitor<TResult> typedVisitor = visitor as IMintDParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBreakStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BreakStatementContext breakStatement() {
		BreakStatementContext _localctx = new BreakStatementContext(Context, State);
		EnterRule(_localctx, 6, RULE_breakStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139;
			Match(BREAK);
			State = 140;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContinueStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CONTINUE() { return GetToken(MintDParser.CONTINUE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(MintDParser.SEMI, 0); }
		public ContinueStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_continueStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterContinueStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitContinueStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMintDParserVisitor<TResult> typedVisitor = visitor as IMintDParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContinueStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContinueStatementContext continueStatement() {
		ContinueStatementContext _localctx = new ContinueStatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_continueStatement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 142;
			Match(CONTINUE);
			State = 143;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReturnStatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RETURN() { return GetToken(MintDParser.RETURN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(MintDParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ReturnStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_returnStatement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterReturnStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitReturnStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMintDParserVisitor<TResult> typedVisitor = visitor as IMintDParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitReturnStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ReturnStatementContext returnStatement() {
		ReturnStatementContext _localctx = new ReturnStatementContext(Context, State);
		EnterRule(_localctx, 10, RULE_returnStatement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 145;
			Match(RETURN);
			State = 147;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((((_la - 9)) & ~0x3f) == 0 && ((1L << (_la - 9)) & ((1L << (INTEGER_LITERAL - 9)) | (1L << (FLOAT_LITERAL - 9)) | (1L << (HEX_INTEGER_LITERAL - 9)) | (1L << (BACK_STRING - 9)) | (1L << (DOUBLE_STRING - 9)) | (1L << (LPAR - 9)) | (1L << (LSQBRACKET - 9)) | (1L << (TRUE - 9)) | (1L << (FALSE - 9)) | (1L << (PLUS - 9)) | (1L << (MINUS - 9)) | (1L << (DOLLAR - 9)) | (1L << (BANG - 9)) | (1L << (INC - 9)) | (1L << (DEC - 9)) | (1L << (Identifier - 9)))) != 0)) {
				{
				State = 146;
				expression();
				}
			}

			State = 149;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(MintDParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(MintDParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementListContext statementList() {
			return GetRuleContext<StatementListContext>(0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMintDParserVisitor<TResult> typedVisitor = visitor as IMintDParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 12, RULE_block);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151;
			Match(LBRACE);
			State = 153;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << VOID) | (1L << STRING) | (1L << INT) | (1L << BOOL) | (1L << FLOAT) | (1L << INTEGER_LITERAL) | (1L << FLOAT_LITERAL) | (1L << HEX_INTEGER_LITERAL) | (1L << SERVER) | (1L << CLIENT) | (1L << BACK_STRING) | (1L << DOUBLE_STRING) | (1L << LPAR) | (1L << LBRACE) | (1L << LSQBRACKET) | (1L << SEMI) | (1L << BREAK) | (1L << CONTINUE) | (1L << RETURN) | (1L << TRUE) | (1L << FALSE) | (1L << IF) | (1L << SWITCH) | (1L << WHILE) | (1L << FOR) | (1L << PLUS) | (1L << MINUS) | (1L << DOLLAR) | (1L << BANG) | (1L << INC))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (DEC - 64)) | (1L << (DO - 64)) | (1L << (Identifier - 64)))) != 0)) {
				{
				State = 152;
				statementList();
				}
			}

			State = 155;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionSpecifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SERVER() { return GetToken(MintDParser.SERVER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLIENT() { return GetToken(MintDParser.CLIENT, 0); }
		public FunctionSpecifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionSpecifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.EnterFunctionSpecifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMintDParserListener typedListener = listener as IMintDParserListener;
			if (typedListener != null) typedListener.ExitFunctionSpecifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
